docs/semantic-ontology/linkml/tests/valid/claim-claim-mismatch-2.jsonld
{
  "@context": {
    "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
    "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@id": "urn:doc:claim-mismatch",
  "@type": "ContractTemplate",
  "documentTitle": "Mismatch Source",
  "metadata": {
    "@type": "TemplateMetadata",
    "title": "Mismatch Source"
  },
  "documentStructure": {
    "@type": "DocumentStructure",
    "layout": [
      {
        "@type": "LayoutNode",
        "isRoot": true,
        "children": [
          "urn:doc:claim-mismatch#s1"
        ]
      },
      {
        "@type": "LayoutNode",
        "@id": "urn:doc:claim-mismatch#s1",
        "children": [
          "urn:doc:claim-mismatch#c1"
        ]
      }
    ],
    "blocks": [
      {
        "@type": "Section",
        "@id": "urn:doc:claim-mismatch#s1",
        "title": "1. Original"
      },
      {
        "@type": "Clause",
        "@id": "urn:doc:claim-mismatch#c1",
        "content": [
          "Original clause content."
        ]
      }
    ]
  }
}